Kimi K2 got stuck on Roll Dice

--- a/kimi/index.html
+++ b/kimi/index.html
@@ -53,7 +53,12 @@
     <div id="game-container" class="game-container" style="display: none;">
         <!-- Game Board -->
         <div id="game-board" class="game-board">
-            <!-- Board will be rendered here -->
+            <div id="board-grid" class="board-grid">
+                <!-- Board will be rendered here -->
+            </div>
+            <div id="player-tokens" class="player-tokens">
+                <!-- Player tokens will be rendered here -->
+            </div>
         </div>
 
         <!-- Turn UI Panel -->
@@ -132,6 +137,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal Container -->
+    <div id="modal-container"></div>
 
     <!-- Loading Screen -->
     <div id="loading-screen" class="loading-screen">
