--- a/deepseek_v3/src/frontend/index.html
+++ b/deepseek_v3/src/frontend/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="/dist/frontend/index.js"></script>
+  <!-- Script will be auto-injected by HtmlWebpackPlugin -->
 </body>
 </html>
